--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@testing-library/react-hooks": "3.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-test-renderer": "16.13.0"
   },
   "devDependencies": {
     "typescript": "3.8.3"
